--- a/package.json
+++ b/package.json
@@ -15,17 +15,15 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "compile": "tsc -w %% node server.js"
+    "setup": "npm ci",
+    "compile": "tsc",
+    "server": "node server.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ts-node": "^10.9.2",
-    "tsc-watch": "^6.2.1"
-  },
-  "devDependencies": {
     "@types/dotenv": "^6.1.1",
-    "tsc": "^2.0.4",
     "typescript": "^5.7.3"
   }
 }
