Adds a empty "test' npm script.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "setup": "npm ci",
     "compile": "tsc",
+    "test": "",
     "server": "node server.js"
   },
   "dependencies": {
