--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "server": "node server.js"
   },
   "dependencies": {
+    "@types/ace": "^0.0.52",
+    "@types/dotenv": "^6.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ts-node": "^10.9.2",
-    "@types/dotenv": "^6.1.1",
     "typescript": "^5.7.3"
   }
 }
