Adds database connection to back-end Implements rudimentary database schema Updates TSConfig to output files to ./dist Updates build scripts to accomodate ./dist Converts server.js to server.ts Converts config.js to config.ts Updates .gitignore to ignore ./dist Adds database settings to .env.example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,21 @@
 {
 	"compilerOptions": {
-	  "module": "system",
-	  "skipLibCheck": true,
-	  "noImplicitAny": true,
-	  "removeComments": true,
-	  "preserveConstEnums": true,
-	  "sourceMap": true,
-	},
-	"include": ["**/*"],
-	"exclude": ["node_modules"]
-  }
+	"emitDecoratorMetadata": true,
+	"experimentalDecorators": true,
+	"module": "commonjs",
+	"skipLibCheck": true,
+	"noUnusedLocals": false,
+	"noImplicitAny": true,
+	"removeComments": true,
+	"preserveConstEnums": true,
+	"sourceMap": true,
+	"allowJs": true,
+	"checkJs": false,
+	"outDir": "./dist",
+  },
+  "include": ["**/*"],
+  "exclude": [
+		"node_modules",
+		"./dist/**/*"
+	]
+}
