--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,5 @@ node_modules
 # Config files
 config/.env
 
-# Compiled JS files (Change?)
-controllers/static/IDE.js
-controllers/static/IDE.js.map
+# Compiled JS files
+dist
