--- a/config/.env.example
+++ b/config/.env.example
@@ -6,3 +6,8 @@ NODE_ENV = development
 PORT = 7777
 
 # DB Config
+PGHOST = localhost
+PGPORT = 8888
+PGUSER = username
+PGPASSWORD = password
+PGDATABASE = database
