--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "setup": "npm ci",
-    "compile": "tsc",
-    "test": "",
-    "server": "node server.js",
-    "start": "npm run compile && npm run server"
+    "clean-install": "npm ci",
+    "setup": "npm install",
+    "build": "npm run setup && tsc && robocopy views dist/views /E && robocopy config dist/config .env",
+    "start": "npm run build && node ./dist/server.js",
+    "test": ""
   },
   "dependencies": {
     "@types/ace": "^0.0.52",
     "@types/dotenv": "^6.1.1",
+    "@types/node": "^22.13.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "pg": "^8.13.3",
+    "postgres": "^3.4.5",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
+    "typeorm": "^0.3.21",
     "typescript": "^5.7.3"
   }
 }
