--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "server.js",
+  "main": "./dist/server.js",
   "scripts": {
     "clean-install": "npm ci",
     "setup": "npm install",
