--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "win-build": "npm run setup && tsc && robocopy views dist/views /E && robocopy config dist/config .env",
     "start": "node ./dist/server.js",
     "win-build & start": "npm run win-build && npm run start",
+    "linux-build & start": "npm run linux-build && npm run start",
     "test": ""
   },
   "dependencies": {
