--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@types/ace": "^0.0.52",
     "@types/dotenv": "^6.1.1",
     "@types/node": "^22.13.9",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.2",
