--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "clean-install": "npm ci",
     "setup": "npm install",
-    "linux-build": "npm run setup && tsc && rsync -av views/ dist/views/ && rsync -av config/.env dist/config/ && rsync -av problems/ dist/problems/",
-    "win-build": "npm run setup && tsc && robocopy views dist/views /E & robocopy config dist/config .env & robocopy problems dist/problems /E",
+    "linux-build": "npm run setup && tsc && rsync -av views/ dist/views/ && rsync -av config/.env dist/config/ && rsync -av assets/ dist/assets/",
+    "win-build": "npm run setup && tsc && robocopy views dist/views /E & robocopy config dist/config .env & robocopy assets dist/assets /E",
     "start": "node ./dist/server.js",
     "win-build & start": "npm run win-build & npm run start",
     "linux-build & start": "npm run linux-build && npm run start",
