--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.21",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1"
   }
 }
